<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".ui.lugar.AddLugarFragment" >

    <EditText
        android:id="@+id/et_nombre"
        android:hint="@string/msg_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_web"
        android:hint="@string/msg_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bt_add_sede"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_add_sede" />

</LinearLayout>